@@ -95,6 +95,8 @@ PIG-1309: Map-side Cogroup (ashutoshc)
 
 BUG FIXES
 
+PIG-1484: BinStorage should support comma seperated path (daijy)
+
 PIG-1469: DefaultDataBag assumes ArrayList as default List type (azaroth via dvryaboy)
 
 PIG-1467: order by fail when set "fs.file.impl.disable.cache" to true (daijy)
